--- a/client/package.json
+++ b/client/package.json
@@ -19,6 +19,7 @@
     "@angular/platform-browser": "~11.2.3",
     "@angular/platform-browser-dynamic": "~11.2.3",
     "@angular/router": "~11.2.3",
+    "@kolkov/ngx-gallery": "^1.2.3",
     "bootswatch": "^4.6.0",
     "ngx-bootstrap": "^6.2.0",
     "ngx-toastr": "^13.2.0",
