--- a/client/package.json
+++ b/client/package.json
@@ -12,6 +12,7 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "~11.2.3",
+    "@angular/cdk": "^11.2.4",
     "@angular/common": "~11.2.3",
     "@angular/compiler": "~11.2.3",
     "@angular/core": "~11.2.3",
@@ -22,6 +23,7 @@
     "@kolkov/ngx-gallery": "^1.2.3",
     "bootswatch": "^4.6.0",
     "ngx-bootstrap": "^6.2.0",
+    "ngx-spinner": "0.0.2",
     "ngx-toastr": "^13.2.0",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
