--- a/client/package.json
+++ b/client/package.json
@@ -22,6 +22,7 @@
     "@angular/router": "~11.2.3",
     "@kolkov/ngx-gallery": "^1.2.3",
     "bootswatch": "^4.6.0",
+    "ng2-file-upload": "^1.4.0",
     "ngx-bootstrap": "^6.2.0",
     "ngx-spinner": "0.0.2",
     "ngx-toastr": "^13.2.0",
